Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134266

grpc chat example doesn't install all libraries

XMLWordPrintable

    • 3
    • 9437a1f2b (dev), d77dc3d14 (6.9), 5ab616bf8 (6.9.0), 80fffc902 (6.8), fcbd80163 (6.8.3)
    • Foundation Sprint 126

      After the rewrite of the qtgrpc chat example (https://codereview.qt-project.org/c/qt/qtgrpc/+/578647), it no longer builds correctly on Yocto

      ERROR: qtgrpc-6.9.0-r0 do_package_qa: QA Issue: /usr/share/examples/grpc/chat/qtgrpc_chat_client contained in package qtgrpc-examples requires libqtgrpc_chat_client_proto.so, but no providers found in RDEPENDS:qtgrpc-examples? [file-rdeps] 

      This is happens since the example doesn't install the qtgrpc_chat_client_proto library and Yocto QA check notices the missing dependency.

      Can be easily reproduced on desktop builds with QtCreator by enabling "Staging for installation" in the Build steps.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dennisoberst Dennis Oberst
            sapiippo Samuli Piippo
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes