qtgrpc chat example: fix deployment

The deployment was incomplete. Fix it by:
 * Building the dependent qtgrpc_chat_client_proto library as
a static library
 * Add the server directory path for reading credentials universally

Amends: cb35d20adbc6cccef26f1c87310b84609ea2da8d.

Fixes: QTBUG-134266
Change-Id: I0666c445fbce159436c5b084ffd77d4191e04213
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 9437a1f2bda651fe82a0d1eed3aaa68dae8a4ad8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d77dc3d1472bf6fd85ad875673149d0b0233f467)
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
(cherry picked from commit 80fffc9020a6863c2c102c17a9324bd6d21d6ca2)